<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayingTicTacToe">

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:text="@string/new_game"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:text="@string/player_x_s_turn"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtXWins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtOWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:scaleType="fitCenter"
        android:text="@string/player_o_s_wins_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtXWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:text="@string/player_x_s_wins_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtOWins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnClearBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="clearBoard"
        android:scaleType="fitCenter"
        android:text="@string/clear_game"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp"
        style="?android:attr/buttonBarStyle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTopLeft"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="topLeftClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTopMid"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="topMiddleClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTopRight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="topRightClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMidLeft"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="middleLeftClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMid"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="middleClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMidRight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="middleRightClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnBottomLeft"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="126dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="bottomLeftClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBottomMid"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="bottomMiddleClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBottomRight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_border"
                android:onClick="bottomRightClicked"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>